# haskell-src-transformation

./: .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  CodeTransformation.cabal  LICENSE  README.md  cabal.project  haskell-src-transformations.cabal
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci-pipeline.yml
Examples/: ExampleQueue1.hs  ExampleQueue2.hs  TransformedExampleQueue1.hs  TransformedExampleQueue2.hs
Examples/ByHandExamples/: Exmp1.md  Exmp2.md  relevantypes.md
doc/: RelevantTypes.md
example/: ExampleQueue1.hs  ExampleQueue2.hs
example/ByHandExamples/: Example1.md  Example2.md  Example3.md  Exmp3.md
example/TestModules/: TestModuleGE.hs
src/: Algo.hs  Application.hs  CaseCompletion.hs  FreshVars.hs  Main.hs  Renaming.hs
src/Examples/: DebugInput.hs
src/exe/: Main.hs
src/lib/: Algo.hs  Application.hs  CaseCompletion.hs  FreshVars.hs  GuardElimination.hs  Renaming.hs
src/test/: Spec.hs  Test.hs
src/test/TestModules/: TestModuleAlgo.hs  TestModuleCC.hs  TestModuleGE.hs
src/test/TestModulesTranslated/: TestModuleAlgo.hs  TestModuleCC.hs  TestModuleGe.hs
tool/: check-formatting.sh  format-code.sh  test.sh
