name:                haskell-src-transformations

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Malte Clement <stu204333@mail.uni-kiel.de>, Jan Christiansen <jan.christiansen@hs-flensburg.de>

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          jan.christiansen@hs-flensburg.de

-- A copyright notice.
-- copyright:

category:            Language

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     Application,
                       Algo,
                       GuardElimination,
                       CaseCompletion,
                       FreshVars

  -- Modules included in this library but not exported.
  other-modules:       Renaming

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       filepath >= 1.4 && < 1.5,
                       mtl >= 2.2 && < 2.3,
                       haskell-src-exts >= 1.23 && < 1.24,
                       base >=4.12 && < 4.13

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src/test
  main-is:            Test.hs
    -- other-modules:
  build-depends:      base,
                      hspec,
                      QuickCheck

  default-language:   Haskell2010
  ghc-options:        -Wall
