cabal-version:       2.4

-- Package name, version and description.
name:                haskell-src-transformations
version:             0.1.0.0
category:            Language
-- synopsis: TODO A short (one-line) description of the package.
-- description:
--   TODO A longer description of the package.

-- Copyright information.
license:             BSD-3-Clause
license-file:        LICENSE
copyright:           (c) 2019, Kiel University

author:              Malte Clement <stu204333@mail.uni-kiel.de>
                   , Jan Christiansen <jan.christiansen@hs-flensburg.de>
maintainer:          jan.christiansen@hs-flensburg.de

-- Build configuration.
build-type:          Simple

-- Common settings and dependencies that are used by all stanzas below.
common deps
  build-depends:       base             >= 4.12 && < 4.13
                     , haskell-src-exts >= 1.23 && < 1.24

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall

-- Build configuration for the actual `haskell-src-transformations` library.
library
  import:             deps

  hs-source-dirs:     src/lib
  exposed-modules:    Application
                    , Algo
                    , GuardElimination
                    , CaseCompletion
                    , FreshVars
  other-modules:      Renaming

  build-depends:      mtl               >= 2.2 && < 2.3

-- Build configuration for the command line interface.
executable haskell-src-transformations
  import:             deps

  -- The @Main@ module is currently the only module of the command
  -- line interface.
  main-is:            Main.hs
  hs-source-dirs:     src/exe
  build-depends:      filepath          >= 1.4 && < 1.5
                    , haskell-src-transformations

-- Build configuration for the unit tests of the library.
test-suite unit-tests
  import:             deps

  type:               exitcode-stdio-1.0
  hs-source-dirs:     src/test
  main-is:            Spec.hs
  ghc-options:        -main-is Spec
  -- other-modules: TODO add unit tests
  build-depends:      base
                    , hspec
                    , QuickCheck
